syntax = "proto3";
package userCRUD;
option go_package="interfaces";

import "google/protobuf/timestamp.proto";
 import "google/api/http";


service UserCrud {
  rpc CreateUser(User) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "user"
    };
  }
  rpc UpdateUser(User) returns (Response) {
    option (google.api.http) = {
      post: "/v1/users/update"
      body: "user"
    };
  }
  rpc ArchiveUser(UserUID) returns (Response) {
    option (google.api.http) = {
      post: "/v1/users/archive"
      body: "uid"
    };
  }
  rpc RestoreUser(UserUID) returns (Response) {
    option (google.api.http) = {
      post: "/v1/users/restore"
      body: "uid"
    };
  }
  rpc DeleteUser(UserUID) returns (Response) {
    option (google.api.http) = {
      post: "/v1/users/delete"
      body: "uid"
    };
  }
  rpc GetUserByUID(UserUID) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/users/{uid}"
    };
  }
  rpc GetUsersByFIO(UserFIOParams) returns (GetUsersResponse) {
    option (google.api.http) = {
      get: "/v1/users/by_fio/{name}/{lastName}/{patronymic}"
    };
  }
  rpc GetUserByPhoneNumber(UserPhoneParams) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/users/by_phone/{phone}"
    };
  }
}


message User {
  string uid = 1;
  string lastName = 3;
  string name = 2;
  string patronymic = 4;
  string phoneNumber = 5;
  google.protobuf.Timestamp createdDateTime = 6;
  google.protobuf.Timestamp updatedDateTime = 7;
  bool isArchived = 8;
}

message CreateUserResponse {
  string uid = 1;
}

message Response {
  string message = 1;
}

message UserUID {
  string uid = 1;
}

message GetUserResponse {
  User user = 1;
}

message UserFIOParams {
  string lastName = 2;
  string name = 1;
  string patronymic = 3;
}

message GetUsersResponse {
  repeated User users = 1;
}

message UserPhoneParams {
  string phone = 1;
}
